crates/touring-server/tests/snapshots/snapshot_wiring_audit__clean_codebase_single_rec.snap
---
source: crates/touring-server/tests/snapshot_wiring_audit.rs
expression: recs
---
- Codebase wiring is clean — no orphan pub symbols detected.
