crates/touring-server/tests/snapshots/snapshot_wiring_audit__low_integration_only.snap
---
source: crates/touring-server/tests/snapshot_wiring_audit.rs
expression: recs
---
- 2 module(s) have integration score < 0.5 — review symbol dependencies.
